WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190259
Web Automation: clear pending callbacks when the session terminates
https://bugs.webkit.org/show_bug.cgi?id=190259
Summary
Web Automation: clear pending callbacks when the session terminates
Blaze Burg
Reported
2018-10-03 13:23:54 PDT
In some cases, the UIProcess may assert when completion handlers are not called and are instead destructed via WebAutomationSession::~WebAutomationSession.
Attachments
Patch
(2.72 KB, patch)
2018-10-03 13:32 PDT
,
Blaze Burg
joepeck
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2018-10-03 13:24:26 PDT
<
rdar://problem/44958352
>
Blaze Burg
Comment 2
2018-10-03 13:32:11 PDT
Created
attachment 351543
[details]
Patch
Joseph Pecoraro
Comment 3
2018-10-04 12:58:39 PDT
Comment on
attachment 351543
[details]
Patch r=me
Blaze Burg
Comment 4
2018-10-04 14:47:27 PDT
Committed
r236852
: <
https://trac.webkit.org/changeset/236852
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug