Web Automation: clear pending callbacks when the session terminates https://bugs.webkit.org/show_bug.cgi?id=190259 <rdar://problem/44958352>

Reviewed by Joseph Pecoraro.

WebAutomationSession::terminate() can be called at any time to nuke the session.
However, it's possible that the session is in the midst of simulating keyboard/mouse
events. While in that state, there are some CompletionHandler objects waiting
for key/mouse events to be flushed. We need to empty out callback maps with
CompletionHandler instances so that they do not assert because they were never called.

I was able to test this manually by running a test that erroneously hangs
while waiting for keyboard input. While the test was hung, I killed the NetworkProcess
manually to trigger WebAutomationSession::terminate(). From there, I saw that the
Perform Actions REST API call gets cancelled with the appropriate error code.

* UIProcess/Automation/WebAutomationSession.cpp:
(WebKit::WebAutomationSession::terminate):

Canonical link: https://commits.webkit.org/205248@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236852 268f45cc-cd09-0410-ab3c-d52691b4dbfc